# birbwatch

./: .gitignore  README.md  config.ini  setup.cfg  streams.json
birbwatch/: __main__.py  config.py  gui.py  server.py  stream.py  streams.py  thread.py
birbwatch_old/: __main__.py  gui.py  server.py  streams.py
doc/: vlc_streamlink_instructions.md
src/birbwatch/: config.py  gui.py
static/: index.html
