[metadata]
name = birbwatch
description = frontend for the mini-tv to watch bird livecams
author = ninivert, meaw
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
version = 0.1
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
install_requires =
	PySide6==6.3.1
	requests=2.28.1
	streamlink==4.1.0
python_requires = >=3.6
package_dir =
	=src
zip_safe = no